test/visibility/use-no-qualified/except-list-error.good
except-list-error.chpl:10: In function 'main':
except-list-error.chpl:11: error: 'A' undeclared (first use this function)
